--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap'); 
 
 :root {
     --anzitems: 10;
@@ -11,7 +11,7 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
-    font-family: 'Jost';
+    font-family: 'Helvetica';
 
 }
 
