--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
-    font-family: 'Helvtica';
+    font-family: 'Helvetica';
 
 }
 
