--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: rgb(0,255,0);
     display: flex;
     align-items: center;
     min-height: 100vh;
